# src/db/models/transaction.js
@@ -1,0 +1,43 @@
+import mongoose from 'mongoose';
+
+const { Schema, model } = mongoose;
+
+const transactionSchema = new Schema(
+  {
+    transactionType: {
+      type: String,
+      enum: ['income', 'expense'],
+      required: true,
+      default: 'expense',
+    },
+    categoryId: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: 'Category',
+      required: true,
+    },
+    summ: {
+      type: Number,
+      required: true,
+      min: 0.01,
+    },
+    date: {
+      type: Date,
+      default: Date.now,
+    },
+    comment: {
+      type: String,
+      maxlength: 300,
+    },
+    userId: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: 'User',
+      required: true,
+    },
+  },
+  {
+    versionKey: false,
+    timestamps: true,
+  },
+);
+
+export const TransactionsCollection = model('transaction', transactionSchema);
